deploy/cosmos.yaml
apiVersion: v1
kind: Service
metadata:
  name: cosmos-db
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: cosmos-db-1
  labels:
    kubernetes.io/service-name: cosmos-db
addressType: IPv4
ports:
  - name: ''
    appProtocol: TCP
    protocol: TCP
    port: 8081
endpoints:
  - addresses:
      - 172.31.112.1
