deploy/k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: compute-uid
  labels:
    app: compute-uid
spec:
  ports:
    - port: 80
      name: web
  clusterIP: None
  selector:
    app: compute-uid
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: compute-uid
spec:
  selector:
    matchLabels:
      app: compute-uid
  serviceName: "compute-uid"
  replicas: 2
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: compute-uid
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: compute-uid
          image: yousuf64/compute-uid-server:1.8
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: compute-uid-storage
              mountPath: /var/app-data
  volumeClaimTemplates:
    - metadata:
        name: compute-uid-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 20Mi
